--- a/src/styles/portfolio.module.scss
+++ b/src/styles/portfolio.module.scss
@@ -41,23 +41,3 @@
 .icon {
   font-size: 0.6em;
 }
-
-
-.sectionIndex {
-  position: absolute;
-  color: $muted;
-  font-size: 5em;
-  font-family: Poppins;
-  top: -0.88em;
-  left: -1.55em;
-  font-weight: 100;
-}
-
-.sectionContainer {
-  position: relative;
-}
-
-.sectionTitle {
-  display: block;
-  margin-bottom: 0.3em;
-}
