--- a/src/styles/sidebar.module.scss
+++ b/src/styles/sidebar.module.scss
@@ -1,20 +1,40 @@
+.row {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+}
+
+.col {
+  height: 100vh;
+}
+
+.wrapper {
+  padding: 0;
+  display: flex;
+  justify-content: end;
+}
+
 .sidebar {
   display: flex;
   justify-content: space-around;
   flex-flow: column nowrap;
-  height: 50vh;
-  position: absolute;
-  right: 10px;
+  position: fixed;
   top: 25vh;
-  width: 80px;
+  height: 50vh;
+  padding: 0;
+  width: 0;
+  margin: 0;
+  border: 0;
 }
 
 .sidebar li {
   list-style-type: none;
   color: white;
   display: inline-block;
-  margin: 20px;
+  margin: 0;
+  padding: 0;
 }
+
 
 .sidebar li a {
   display: block;
